# FastAPI-Project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: application.py  config.py  containers.py
app/api/: board.py  post.py  user.py
app/databases/: rdb.py  redis.py
app/errors/: exceptions.py
app/models/: base.py  board.py  post.py  user.py
app/repositories/: board.py  post.py  user.py
app/schemas/: board.py  post.py  user.py
app/services/: auth.py  board.py  post.py  user.py
app/tests/: conftest.py
app/tests/fixtures/: board.py  user.py
app/tests/services/: auth.py  board.py  user.py
cli/: migrate.py
migrations/: env.py
migrations/versions/: 2024_05_06_0000-4db45887bbc1_create_board_table.py  2024_05_06_0000-bfb4406ba3ab_create_user_table.py  2024_05_06_0000-da5a04713d04_create_post_table.py
