[tool.poetry]
name = "FastAPI Project"
version = "1.0.0"
description = "현제 FastAPI를 이용한 프로젝트의 코딩 스타일을 확인할 수 있습니다."
authors = ["박상도"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
alembic = "^1.13.1"
pre-commit = "^3.7.0"
pydantic = "1.10.14"
greenlet = "^3.0.3"
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0"
email-validator = "^2.1.1"
redis = "^5.0.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.7"
mypy = "^1.9.0"
httpx = "^0.27.0"
types-passlib = "^1.7.7.20240327"
pytest-asyncio = "^0.23.6"
pytest-trio = "^0.8.0"
types-python-jose = "^3.3.4.20240106"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["app.tests.*"]
disable_error_code = ["method-assign"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint]
select = [
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
    "W191",  # indentation contains tabs
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["*.py"]
